Admin console (admin.myaba.ai): real data, org invitations, hosting
- PlatformService: Firestore-backed in production (was dev-only in-memory
  stub) — tenants from organizations collection w/ member counts, admin
  email, current-month usage; config at platform/config; real ACLX/Firebase
  health probes
- Admin console: Org Invitations view (approved-creators list/add/revoke/
  re-approve), Google sign-in, server-side access probe with denied screen
  (no client claim checks), X-Firebase-Token header (Hosting edge strips
  Authorization), usage/tenant views on real counters (docs/chats, no
  tokens/storage), Gemini config tab (Claude remnants removed)
- Hosting: "admin" target (site myaba-admin) with /api rewrite to Cloud Run;
  PLATFORM_ADMIN_EMAILS + admin origins in cloud-run-api.yaml (CI uses
  `services replace`, so env must live in the YAML); deploy runbook in
  admin-console/README.md

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>